--- a/Context_Processor.csproj
+++ b/Context_Processor.csproj
@@ -18,5 +18,6 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.9.9" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.9" />
     <PackageReference Include="MessageBox.Avalonia" Version="0.9.6.1" />
+    <PackageReference Include="RavenDB.Client" Version="4.2.103" />
   </ItemGroup>
 </Project>
